--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -1,8 +1,8 @@
 experiment=dummy
-resume=experiments/dummy/model_save_dummy.pth.tar
+#resume=experiments/dummy/model_save_dummy.pth.tar
 override=override_model_opts,resume,save_every,lr
 stage=mini
-lr=0.000001
+lr=0.1
 print-every=1
 save-every=1
 eval-every=1
