--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -1,5 +1,5 @@
 experiment=dummy
-#resume=experiments/dummy/model_save_dummy.pth.tar
+resume=experiments/dummy/model_save_dummy.pth.tar
 override=override_model_opts,resume,save_every,lr
 stage=mini
 lr=0.1
