Fixing the merge conflict.
- Rename cfg to global_state. Also put args in global_state.
- Make checkpoint saving compatible.
- Make 'stratify' an option

--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -1,6 +1,7 @@
 experiment=dummy
-#resume=experiments/dummy/model_save_dummy.pth.tar
-override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience
+model=cnn
+resume=experiments/dummy/model_save_dummy.pth.tar
+override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou
 stage=mini
 lr=0.1
 print-every=1
