Enable saving/loading model only. Bug fixes.

--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -1,7 +1,8 @@
 experiment=dummy
 model=cnn
 resume=experiments/dummy/model_save_dummy.pth.tar
-override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou
+override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs
+epochs=4
 stage=mini
 lr=0.1
 print-every=1
