--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -1,7 +1,7 @@
 experiment=dummy
 model=cnn
-resume=experiments/dummy/model_save_dummy.pth.tar
-override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs
+#resume=experiments/dummy/model_save_dummy.pth.tar
+override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights
 epochs=4
 stage=mini
 lr=0.1
@@ -10,3 +10,4 @@ save-every=1
 eval-every=1
 patience=1
 cooldown=0
+use-instance-weights=1
