--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -1,7 +1,7 @@
 experiment=dummy
 model=cnn
 #resume=experiments/dummy/model_save_dummy.pth.tar
-override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights
+override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights,grad-accum
 epochs=4
 stage=mini
 lr=0.1
@@ -10,4 +10,5 @@ save-every=1
 eval-every=1
 patience=1
 cooldown=0
+#grad-accum=4
 use-instance-weights=1
