Some major improvements.
- Add weight initialization.
- Add script to compare learning curves.
- Make scheduler an option.
- Bug fix with overrides and resume.

--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -1,7 +1,7 @@
 experiment=dummy
 model=cnn
-#resume=experiments/dummy/model_save_dummy.pth.tar
-override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights,grad-accum
+resume=experiments/dummy/model_save_dummy.pth.tar
+override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights,grad-accum,clip-gradient
 epochs=4
 stage=mini
 lr=0.1
@@ -11,4 +11,5 @@ eval-every=1
 patience=1
 cooldown=0
 grad-accum=4
+clip-gradient=0
 #use-instance-weights=1
