Refactoring main routine to accomodate LFBGS with gradient accumulation.

--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -1,7 +1,8 @@
 experiment=dummy
 model=cnn
+verbose=1
 resume=experiments/dummy/model_save_dummy.pth.tar
-override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights,grad-accum,clip-gradient
+override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights,grad-accum,clip-gradient,optim,history-size,max-iter-lbfgs
 epochs=4
 stage=mini
 lr=0.1
@@ -10,6 +11,9 @@ save-every=1
 eval-every=1
 patience=1
 cooldown=0
-grad-accum=4
+grad-accum=1
 clip-gradient=0
+optim=lbfgs
+max-iter-lbfgs=20
+#history-size=1
 #use-instance-weights=1
