Bug fix in plotting.

--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -1,7 +1,7 @@
 experiment=dummy
 model=cnn
 verbose=1
-resume=experiments/dummy/model_save_dummy.pth.tar
+#resume=experiments/dummy/model_save_dummy.pth.tar
 override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights,grad-accum,clip-gradient,optim,history-size,max-iter-lbfgs
 epochs=4
 stage=mini
@@ -14,6 +14,6 @@ cooldown=0
 grad-accum=1
 clip-gradient=0
 optim=lbfgs
-max-iter-lbfgs=20
+max-iter-lbfgs=10
 #history-size=1
 #use-instance-weights=1
