Replace BN by GN.
- Also remove old config files.

--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -2,8 +2,10 @@ experiment=dummy
 model=cnn
 verbose=1
 #resume=experiments/dummy/model_save_dummy.pth.tar
-override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights,grad-accum,clip-gradient,optim,history-size,max-iter-lbfgs
-epochs=4
+#resume=experiments/model_best.pth.tar
+out-dir=experiments/dummy
+override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights,grad-accum,clip-gradient,optim,history-size,max-iter-lbfgs,out-dir,scheduler,switch-to-lbfgs,criterion
+epochs=100
 stage=mini
 lr=0.1
 print-every=1
@@ -13,7 +15,10 @@ patience=1
 cooldown=0
 grad-accum=1
 clip-gradient=0
-optim=lbfgs
+optim=adam
 max-iter-lbfgs=10
+scheduler=plateau
+criterion=bce
+switch-to-lbfgs=1
 #history-size=1
-#use-instance-weights=1
+use-instance-weights=1
