Adapt for CUDA.

--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -1,11 +1,12 @@
 experiment=dummy
+data=/home/ec2-user/nucleus/data_science_bowl_2018/input
+override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights,grad-accum,clip-gradient,optim,history-size,max-iter-lbfgs,out-dir,scheduler,switch-to-lbfgs,criterion,cuda,data,stratify,workers,force-overwrite
 model=cnn
 verbose=1
 #resume=experiments/dummy/model_save_dummy.pth.tar
 #resume=experiments/model_best.pth.tar
 out-dir=experiments/dummy
-override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights,grad-accum,clip-gradient,optim,history-size,max-iter-lbfgs,out-dir,scheduler,switch-to-lbfgs,criterion
-epochs=100
+epochs=5
 stage=mini
 lr=0.1
 print-every=1
@@ -20,5 +21,8 @@ max-iter-lbfgs=10
 scheduler=plateau
 criterion=bce
 switch-to-lbfgs=1
-#history-size=1
+stratify=0
 use-instance-weights=1
+cuda=0
+workers=4
+force-overwrite=1
