--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -1,13 +1,13 @@
 experiment=dummy
-data=/home/ec2-user/nucleus/data_science_bowl_2018/input
-override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights,grad-accum,clip-gradient,optim,history-size,max-iter-lbfgs,out-dir,scheduler,switch-to-lbfgs,criterion,cuda,data,stratify,workers,force-overwrite
+data=./
+override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,epochs,grad-accum,clip-gradient,optim,history-size,max-iter-lbfgs,out-dir,scheduler,switch-to-lbfgs,criterion,cuda,data,stratify,workers,force-overwrite
 model=cnn
 verbose=1
 #resume=experiments/dummy/model_save_dummy.pth.tar
 #resume=experiments/model_best.pth.tar
 out-dir=experiments/dummy
 epochs=5
-stage=mini
+stage=stage1small
 lr=0.1
 print-every=1
 save-every=1
@@ -22,7 +22,7 @@ scheduler=plateau
 criterion=bce
 switch-to-lbfgs=1
 stratify=0
-use-instance-weights=1
+#use-instance-weights=1
 cuda=0
 workers=4
 force-overwrite=1
