--- a/scripts/default.cfg
+++ b/scripts/default.cfg
@@ -1,28 +1,37 @@
 experiment=dummy
-data=/home/ec2-user/nucleus/data_science_bowl_2018/input
-override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,calc-iou,epochs,use-instance-weights,grad-accum,clip-gradient,optim,history-size,max-iter-lbfgs,out-dir,scheduler,switch-to-lbfgs,criterion,cuda,data,stratify,workers,force-overwrite
-model=cnn
-verbose=1
-#resume=experiments/dummy/model_save_dummy.pth.tar
-#resume=experiments/model_best.pth.tar
+#data=/home/ec2-user/nucleus/data_science_bowl_2018/input
+data=/Users/stefan/Documents/nucleus/input
 out-dir=experiments/dummy
-epochs=5
+override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,epochs,instance-weights,grad-accum,clip-gradient,optim,lbfgs-history-size,lbfgs-max-iter,out-dir,scheduler,switch-to-lbfgs,criterion,cuda,data,stratify,workers,force-overwrite,do
+init-output-bias=seg:0.14,cont:0.0195
+resume=experiments/dummy
+model=cnn
+arch=simple
+do=train
+train-img-size-mode=crop
+targets=seg:masks_prep_bin:0.2,cont:contours:0.8:10
+verbose=1
+epochs=10
 stage=mini
-lr=0.1
-print-every=1
-save-every=1
-eval-every=1
-patience=1
-cooldown=0
-grad-accum=1
-clip-gradient=0
-optim=adam
-max-iter-lbfgs=10
-scheduler=plateau
-criterion=bce
-switch-to-lbfgs=1
+valid-fraction=0.05
 stratify=0
-use-instance-weights=1
+instance-weights=inst_wt
+batch-size=2
+grad-accum=1
+workers=0
 cuda=0
-workers=4
+cuda-benchmark=1
 force-overwrite=1
+criterion=bce
+optim=adam
+lr=0.1
+lr-decay=0.1
+min-lr=0.1
+scheduler=plateau
+scheduler_milestones=200
+switch-to-lbfgs=0
+lbfgs-tolerance-change=0.02
+patience=0
+cooldown=0
+lbfgs-max-iter=10
+clip-gradient=0.25
