--- a/pytorch_dsb2018/default.cfg
+++ b/pytorch_dsb2018/default.cfg
@@ -4,8 +4,7 @@ data=/Users/stefan/Documents/nucleus/input
 out-dir=experiments/dummy
 override-model-opts=override_model_opts,resume,save_every,lr,stage,cooldown,patience,epochs,instance-weights,grad-accum,clip-gradient,optim,lbfgs-history-size,lbfgs-max-iter,out-dir,scheduler,switch-to-lbfgs,criterion,cuda,data,stratify,workers,force-overwrite,do
 init-output-bias=seg:0.14,cont:0.0195
-resume=experiments/dummy
-model=cnn
+#resume=experiments/dummy
 arch=simple
 do=train
 train-img-size-mode=crop
